Fix double scroll bars

--- a/CSETWebNg/src/sass/styles.scss
+++ b/CSETWebNg/src/sass/styles.scss
@@ -2271,6 +2271,10 @@ mat-sidenav {
   letter-spacing: normal !important;
 }
 
+.mdc-dialog__surface {
+  overflow-y: hidden !important;
+}
+
 table.assessment-documents {
   width: 500px;
   max-height: 500px;
